// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: PackageMapping 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: importDeclarationsFlatText 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph prepareTsMorph simple repo test_fixtures pkg: tempRepo.status 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "test_branch",
  "deleted": Array [],
  "detached": false,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;

exports[`test morph prepareTsMorph simple repo: importDeclarationsFlatText 1`] = `
Array [
  "lib\\\\__tests__\\\\complexRepo.test.ts: import shell from \\"shelljs\\";",
  "lib\\\\__tests__\\\\complexRepo.test.ts: import { PackageMapping } from \\"../../lib\\";",
  "lib\\\\__tests__\\\\complexRepo.test.ts: import { createWriteStream /* , mkdirSync */ } from \\"fs\\";",
  "lib\\\\__tests__\\\\complexRepo.test.ts: import { promisify } from \\"util\\";",
  "lib\\\\__tests__\\\\git.test.ts: import * as sut from \\"../git\\";",
  "lib\\\\__tests__\\\\git.test.ts: import { loadSimpleMadge } from \\"test_fixtures\\";",
  "lib\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"../../..\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import madge from \\"madge\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import { createWriteStream } from \\"fs\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import { loadSimpleMadge, simpleMadgeDependenciesPath } from \\"test_fixtures\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import { promisify } from \\"util\\";",
  "lib\\\\git.ts: import { PackageMapping } from \\"new\\";",
  "lib\\\\git.ts: import { SimpleGit } from \\"simple-git\\";",
  "lib\\\\git.ts: import { basename } from \\"path\\";",
  "lib\\\\mapping.ts: import * as fs from \\"fs-extra\\";",
  "lib\\\\mapping.ts: import { ICruiseResult } from \\"dependency-cruiser\\";",
]
`;

exports[`test morph prepareTsMorph simple repo: tempRepo.status 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "test_branch",
  "deleted": Array [],
  "detached": false,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;

exports[`test morph prepareTsMorph simple repo: test_fixtures 1`] = `
Array [
  "lib\\\\__tests__\\\\git.test.ts: import { loadSimpleMadge } from \\"test_fixtures\\";",
  "lib\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"../../..\\";",
  "lib\\\\__tests__\\\\tsMorphSplitPackages.test.ts: import { loadSimpleMadge, simpleMadgeDependenciesPath } from \\"test_fixtures\\";",
]
`;

exports[`test morph save modified simple repo: PackageMapping 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph save modified simple repo: importDeclarationsFlatText 1`] = `
Array [
  "lib\\\\package\\\\test_fixtures\\\\__tests__\\\\test_fixtures.ts: import { PackageMapping } from \\"new\\";",
]
`;

exports[`test morph save modified simple repo: tempRepo.status before 1`] = `
StatusSummary {
  "ahead": 0,
  "behind": 0,
  "conflicted": Array [],
  "created": Array [],
  "current": "HEAD",
  "deleted": Array [],
  "detached": true,
  "files": Array [],
  "ignored": undefined,
  "isClean": [Function],
  "modified": Array [],
  "not_added": Array [],
  "renamed": Array [],
  "staged": Array [],
  "tracking": null,
}
`;
